spacing on start menu fixed

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -77,6 +77,7 @@
     white-space: nowrap;
     max-width: 70%;
     overflow: hidden;
+    margin-top: 16px;
 }
 
 .tab-icon{
